# task-management-ddd

./: .gitignore  pyproject.toml
src/application/use_cases/projects/: create_project.py  delete_project.py  get_all_projects.py  get_project.py  get_project_tasks.py  link_task.py  unlink_task.py  update_project.py
src/application/use_cases/tasks/: create_task.py  delete_task.py  get_all_tasks.py  get_task.py  mark_as_completed.py  mark_as_incomplete.py  update_task.py
src/domain/entities/: base.py  project.py  task.py
src/domain/exceptions/: base.py  task_exceptions.py
src/domain/ports/: config_port.py  unit_of_work.py
src/domain/ports/repositories/: project_repository.py  task_repository.py
src/domain/services/: deadline_service.py
src/infrastructure/api/: dependencies.py  exception_handlers.py  main.py
src/infrastructure/api/routers/: projects.py  tasks.py
src/infrastructure/api/schemas/: project_schemas.py  task_schemas.py
src/infrastructure/config/: env_config_service.py
src/infrastructure/database/: config.py  mappers.py  unit_of_work.py
src/infrastructure/database/repositories/: project_repository.py  task_repository.py
src/infrastructure/database/tables/: project_table.py  task_table.py
tests/unit/domain/: conftest.py
tests/unit/domain/entities/: test_base.py  test_project.py  test_task.py
tests/unit/domain/services/: test_deadline_service.py
